Add constructor for connection class

--- a/vignettes/getting_started.Rmd
+++ b/vignettes/getting_started.Rmd
@@ -69,7 +69,7 @@ BiocManager::install("seandavi/BigRNA")
 library(knitr)
 opts_chunk$set(message=FALSE, cache=FALSE)
 library(BigRNAr)
-bigrna = new("BigRNAConnection")
+bigrna = BigRNAConnection()
 bigrna
 ```
 
@@ -179,7 +179,7 @@ head(df)
 ```
 
 
-## Download
+## Download data
 
 
 
